js/js.translator/testData/incremental/invalidationWithPL/functionAndSuspendFunctionInterfaces/main/m.0.kt
fun box(stepId: Int, isWasm: Boolean): String = test(stepId, isWasm)
